PLUTO-675 Use parsed display name in V2EnvironmentTests_PortletContext

--- a/portlet-tck_3.0/V2EnvironmentTests/src/main/webapp/WEB-INF/web.xml
+++ b/portlet-tck_3.0/V2EnvironmentTests/src/main/webapp/WEB-INF/web.xml
@@ -74,5 +74,7 @@
 	     javax.portlet.tck.attributes.V2EnvironmentTests_PortletSession_ApiRender_Attribute
 	 </listener-class>
 	</listener>
-
+   <listener>
+      <listener-class>javax.portlet.tck.servlet.StartupListener</listener-class>
+   </listener>
 </web-app>
